src/components/App.scss
body {
	font-family: 'Roboto';
	background-color: #222225;
}

main {
	padding: 0 15px;
	height: calc(100% - 72px);

	display: flex;
	overflow: hidden;
}

#root {
	text-align: center;
}

::-webkit-scrollbar {
	width: 5px;
	height: 5px;
}

::-webkit-scrollbar-track {
	background: #282828;
	border-radius: 10px;
}

::-webkit-scrollbar-thumb {
	background: #414141;
	border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
	background: #414141;
}

::-webkit-scrollbar-corner {
	background: transparent;
}

